# priconevh

./: AUTO_DETECT_IMPROVEMENT.md  CHANGE_LOGO_GUIDE.md  GAME_VALIDATION_IMPROVEMENT.md  GITHUB_RELEASE_GUIDE.md  MIGRATION_TO_VANILLA_CSS.md  README.md  RESET_APP_DATA.md  SETTINGS_STATUS.md  SIMPLE_UPDATER_GUIDE.md  TRANSLATION_UI_IMPROVEMENTS.md  UNINSTALL_FEATURE.md  UPDATER_SETUP.md  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config_commands.rs  game_commands.rs  mod.rs  system_commands.rs  translation_commands.rs  updater_commands.rs
src-tauri/src/models/: app_config.rs  game_info.rs  mod.rs  translation_pack.rs
src-tauri/src/services/: download_service.rs  file_service.rs  game_service.rs  github_service.rs  mod.rs  translation_service.rs  updater_service.rs
src/components/layout/: Sidebar.tsx
src/components/pages/: Dashboard.tsx  GamePath.tsx  MainScreen.css  MainScreen.tsx  Settings.css  Settings.tsx  Translation.tsx
src/components/ui/: UpdateNotification.tsx
src/hooks/: useAppUpdate.ts  useGamePath.ts  useTranslation.ts
src/lib/: api.ts  utils.ts
src/types/: index.ts
